<resources>
    <string name="app_name">Bathing Sites</string>

    <!--  MainActivity  -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_download">Download</string>
    <string name="add_bathing_site_button_text">Add Bathing Site</string>

    <!--  BathingSitesFragment  -->
    <string name="bathing_sites_text">Bathing Sites</string>

    <!-- AddBathingSiteFragment  -->
    <string name="name_text">Name *</string>
    <string name="latitude_text">Latitude *</string>
    <string name="longitude_text">Longitude *</string>
    <string name="water_temp_text">Water temp:</string>
    <string name="date_for_temp_text">Date for temp:</string>
    <string name="description_text">Description</string>
    <string name="address_text">Address *</string>
    <string name="rating_text">Rating</string>
    <string name="cant_download_weather_data">Correct address or Latitude and Longitude is required for
    displaying weather information.</string>
    <string name="download_weather_progress_message">Getting current weather..</string>
    <string name="icon_url">https://openweathermap.org/img/w/</string>
    <string name="bathing_site_already_exists_error">A bathing site with these coordinates already exists.</string>
    <string name="unexpected_save_error">An unexpected error occurred when saving bathing site.</string>
    <string name="unexpected_weather_download_error">An unexpected error occurred when saving bathing site.</string>
    <string name="bathing_site_saved">Bathing Site Saved.</string>

    <!-- SettingsActivity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- WeatherDialogFragment -->
    <string name="current_weather_title">Current weather</string>
    <string name="weather_dialog_button">@android:string/ok</string>

    <!-- Preferences -->
    <string name="weather_url_key">weather_url_preference</string>
    <string name="bathingsite_url_key">bathingsite_url_preference</string>

    <!-- AddBathingSite Menu -->
    <string name="add_bathing_site_menu_clear">CLEAR</string>
    <string name="add_bathing_site_menu_save">SAVE</string>
    <string name="add_bathing_site_menu_show_weather">Show Weather</string>

    <!--  DownloadActivity  -->
    <string name="download_bathing_site_progress_title">Downloading bathing sites..</string>
    <string name="unexpected_bathing_site_download_error">An unexpected error occurred when downloading bathing sites.</string>
    <string name="already_downloaded_snackbar_text">This bathing site has already been downloaded.</string>

</resources>